RELEASE 1
- Fetching all scores
- Fetching score based on id
- Adding a new score
- Deleting a score by id
- Sort scores in asc or desc order

RELEASE 2
- Reading scores
- Save scores to the text file
- Limit scores
- Limit & sort work together
- HTML added

RELEASE 3
- Validation for username
- Password-function added for authentication
- HTML Post 